--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
    "dependencies": {
       "axios": "^0.19.0",
       "express": "^4.17.1",
-      "nodemon": "^1.19.2"
+      "nodemon": "^1.19.2",
+      "uniqid": "^5.0.3"
    }
 }
